# cms-tfaot

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint_and_test.yml
cms_tfaot/: __init__.py  __meta__.py  toolfile.xml.in  wrapper.h.in
cms_tfaot/scripts/: compile_model.py  tfaot_compile.py
test_models/multi/: aot_config.yaml  create.py
test_models/multi/saved_model/: fingerprint.pb  saved_model.pb
test_models/multi/saved_model/variables/: variables.data-00000-of-00001  variables.index
test_models/simple/: aot_config.yaml
test_models/simple/saved_model/: fingerprint.pb  saved_model.pb
